# json5cpp

./: CMakeLists.txt  README.md  build_test_coverage.sh  coverage-clang.sh  coverage-gcc.sh  todo.txt
.github/workflows/: coverage-clang.yaml  gcovr.yaml  publish-coverage.yaml  test.yaml
js_reference/: comments.txt  fuzz.html  index.html  json5.mjs  test.html
src/: jsonvalue.hpp  parse.hpp  parserstate.hpp  stringify.hpp  test.cpp  token.hpp  utf8.hpp  util.hpp
test/: errors.cpp  main.cpp  parse.cpp  stringify.cpp  test.h  test_errors.hpp  test_jsonvalue.hpp  test_parse.hpp  test_stringify.hpp  test_utf8.hpp  test_util.hpp
tools/: parse_.cpp  ranges.txt  transpiler.py  unicode_scanner.py
